[build-system]
requires = ["setuptools", "wheel", "requests"]

[tool.poetry]
name = "SoundTrack"
version = "0.0.0.0"
description = "SoundTrack is a powerful Python library designed to simplify audio processing tasks, specifically focusing on separating various audio tracks such as vocals, bass, and drums from music files. Leveraging advanced AI models like Demucs, SoundTrack offers a straightforward way to isolate different elements of a song with high precision."
authors = ["Heitor Bisneto <heitor.bardemaker@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
